# Anamnesis

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  META.scm  README.md  SECURITY.md
.claude/: CLAUDE.md
.github/workflows/: guix-nix-policy.yml  mirror.yml  quality.yml  rsr-antipattern.yml  security-policy.yml  ts-blocker.yml  wellknown-enforcement.yml
.well-known/: ai.txt  humans.txt  security.txt
docs/: AUTONOMOUS_SESSION_SUMMARY.adoc  OFFLINE_FIRST.md
docs/architecture/: system-architecture.adoc
docs/research/: julia-rdf-ecosystem.adoc  julia-reservoir-computing.adoc  lambda-prolog-meta-reasoning.adoc  ocaml-parsing-elixir-bridge.adoc  puppygraph-evaluation.adoc  rescript-visualization.adoc
docs/specifications/: rdf-schema.ttl
learning/: Project.toml  README.md
learning/src/: AnamnesisAnalytics.jl  port_interface.jl
learning/src/rdf/: schema.jl  serialization.jl
learning/test/: runtests.jl
orchestrator/: README.md  mix.exs
orchestrator/config/: config.exs  dev.exs
orchestrator/lib/anamnesis/: application.ex  port_supervisor.ex
parser/: README.md  dune-project
parser/lib/: conversation_types.atd  dune  generic_conversation.ml
parser/lib/parsers/: claude_parser.ml
parser/test/: dune  test_claude_parser.ml  test_generic_conversation.ml
reasoning/: README.md
reasoning/categorization/: contamination.elpi  fuzzy_membership.elpi
reasoning/lifecycle/: artifact_states.elpi
scripts/: rsr_compliance_check.sh
visualization/: README.md  package.json
visualization/src/__tests__/: ColorMixing_test.res  Domain_test.res
(+6 files in other folders)
